# pyfind

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test_performance.py
.github/workflows/: python-package.yml
src/pyfind/: config.py  filter_files.py  main.py
tests/: test_full_flow.py  test_tree.py
